fix news image too large for mobile (dirty fix)

--- a/src/templates/blog-list.module.scss
+++ b/src/templates/blog-list.module.scss
@@ -10,4 +10,8 @@
 
         padding-top:20px;
     }
+
+    img {
+        max-width: 90vw;
+    }
 }
